CODA: welcome: fix visible border in slideshow iframe

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -1456,6 +1456,7 @@ body {
 	height: 100%;
 	z-index: 1000000;
 	background-color: black;
+	border: none;
 }
 
 .table-add-col-row-marker {
